--- a/house_price_prediction.ipynb
+++ b/house_price_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0435a474",
+   "id": "bef1b3a9",
    "metadata": {},
    "source": [
     "House Price Prediction - Modelling Exercise\n",
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "d1e37fd6",
+   "id": "1d23201c",
    "metadata": {
     "scrolled": true
    },
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "c682c7e4",
+   "id": "d8e17e81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "667b31d7",
+   "id": "2e2a084b",
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "8594bf15",
+   "id": "ca77ba5d",
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "2529be76",
+   "id": "ffd1011c",
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "c08ad551",
+   "id": "03bd1d4d",
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "47cc10a4",
+   "id": "c75da36f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,7 +672,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "1ecd6bab",
+   "id": "fb01326a",
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "0a1a4be2",
+   "id": "47f5b7c5",
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +746,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "735b39e1",
+   "id": "12b0504a",
    "metadata": {},
    "outputs": [
     {
@@ -783,7 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "d6bdc1d4",
+   "id": "14b35b4e",
    "metadata": {},
    "outputs": [
     {
@@ -810,7 +810,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "330b4715",
+   "id": "f956a36a",
    "metadata": {},
    "outputs": [
     {
@@ -835,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "fe7029a4",
+   "id": "a1d309b4",
    "metadata": {},
    "outputs": [
     {
@@ -878,7 +878,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "51994a37",
+   "id": "e0152744",
    "metadata": {},
    "outputs": [
     {
@@ -922,7 +922,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "d6682628",
+   "id": "1759ad30",
    "metadata": {},
    "outputs": [
     {
@@ -947,7 +947,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a483784",
+   "id": "f2e63813",
    "metadata": {},
    "source": [
     "plt.figure(figsize=(8,6))\n",
@@ -966,7 +966,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "df8e71f0",
+   "id": "c0bfe3cb",
    "metadata": {},
    "outputs": [
     {
@@ -1093,17 +1093,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1d5c016",
+   "id": "fcd5fa33",
    "metadata": {},
    "source": [
     "Automated Valuation Model (AVM) – Winnipeg Property Assessment\n",
+    "\n",
     "(a) Accessible Summary (Non-Technical)\n",
     "\n",
     "This project builds an Automated Valuation Model (AVM) to predict the assessed value of residential properties in Winnipeg using open data from the City of Winnipeg’s Assessment dataset.\n",
     "The goal was to estimate property values from characteristics like total living area, year built, building type, and neighbourhood.\n",
     "\n",
-    "The data was cleaned to remove missing or inconsistent entries, and the most relevant property features were used to train three predictive models — Linear Regression, Random Forest, and XGBoost.\n",
-    "The models were evaluated based on how closely their predictions matched actual assessments. For example, for one property assessed at $660,000, the Random Forest model predicted about $742,000, while for another assessed at $262,000, it predicted $218,777 — showing strong alignment overall.\n",
+    "The data was cleaned to remove missing or inconsistent entries, and the most relevant property features were used to train three predictive models : Linear Regression, Random Forest, and XGBoost.\n",
+    "The models were evaluated based on how closely their predictions matched actual assessments. For example, for one property assessed at $660,000, the Random Forest model predicted about  $742,000, while for another assessed at  $262,000, it predicted $218,777 , showing strong alignment overall.\n",
     "\n",
     "Among the three, XGBoost produced the most accurate predictions, offering a balance of accuracy and interpretability. This approach demonstrates how data-driven valuation can support fairer and more transparent property assessments while reducing manual effort.\n",
     "\n",
@@ -1154,13 +1155,14 @@
     "\n",
     "ChatGPT (GPT-5) was used as a coding and documentation assistant — helping to structure the workflow, debug syntax, and format the report clearly.\n",
     "All data analysis, model training, and evaluation were conducted independently in Python within Jupyter Notebook.\n",
-    "Interpretation of results, modeling choices, and narrative explanations were made by me.\n"
+    "Interpretation of results, modeling choices, and narrative explanations were made by me.\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5df2c58c",
+   "id": "fdafe493",
    "metadata": {},
    "outputs": [],
    "source": []
