Updated markdown summary and documentation

--- a/house_price_prediction.ipynb
+++ b/house_price_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "bef1b3a9",
+   "id": "5e97d3f6",
    "metadata": {},
    "source": [
     "House Price Prediction - Modelling Exercise\n",
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "1d23201c",
+   "id": "c58026c3",
    "metadata": {
     "scrolled": true
    },
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "d8e17e81",
+   "id": "f7d0ec4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "2e2a084b",
+   "id": "87b269f1",
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "ca77ba5d",
+   "id": "fc848245",
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "ffd1011c",
+   "id": "f7f122b7",
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "03bd1d4d",
+   "id": "1a6b32ca",
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "c75da36f",
+   "id": "5d310c00",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,7 +672,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "fb01326a",
+   "id": "01c819e8",
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "47f5b7c5",
+   "id": "b452c1ee",
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +746,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "12b0504a",
+   "id": "e7659ea8",
    "metadata": {},
    "outputs": [
     {
@@ -783,7 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "14b35b4e",
+   "id": "ccbb0554",
    "metadata": {},
    "outputs": [
     {
@@ -810,7 +810,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "f956a36a",
+   "id": "e49cc082",
    "metadata": {},
    "outputs": [
     {
@@ -835,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "a1d309b4",
+   "id": "bc86f7ec",
    "metadata": {},
    "outputs": [
     {
@@ -878,7 +878,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "e0152744",
+   "id": "ae464c09",
    "metadata": {},
    "outputs": [
     {
@@ -922,7 +922,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "1759ad30",
+   "id": "34c622ae",
    "metadata": {},
    "outputs": [
     {
@@ -947,7 +947,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2e63813",
+   "id": "98ee57c6",
    "metadata": {},
    "source": [
     "plt.figure(figsize=(8,6))\n",
@@ -966,7 +966,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "c0bfe3cb",
+   "id": "dcf6cd87",
    "metadata": {},
    "outputs": [
     {
@@ -1093,31 +1093,31 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcd5fa33",
+   "id": "0eb93e78",
    "metadata": {},
    "source": [
-    "Automated Valuation Model (AVM) – Winnipeg Property Assessment\n",
+    "## Automated Valuation Model (AVM) – Winnipeg Property Assessment\n",
     "\n",
-    "(a) Accessible Summary (Non-Technical)\n",
+    "## (a) Accessible Summary (Non-Technical)\n",
     "\n",
     "This project builds an Automated Valuation Model (AVM) to predict the assessed value of residential properties in Winnipeg using open data from the City of Winnipeg’s Assessment dataset.\n",
     "The goal was to estimate property values from characteristics like total living area, year built, building type, and neighbourhood.\n",
     "\n",
     "The data was cleaned to remove missing or inconsistent entries, and the most relevant property features were used to train three predictive models : Linear Regression, Random Forest, and XGBoost.\n",
-    "The models were evaluated based on how closely their predictions matched actual assessments. For example, for one property assessed at $660,000, the Random Forest model predicted about  $742,000, while for another assessed at  $262,000, it predicted $218,777 , showing strong alignment overall.\n",
+    "The models were evaluated based on how closely their predictions matched actual assessments. For example, for one property assessed at $660,000, the Random Forest model predicted about  $742,000, while for another assessed at  $262,000, it predicted  $218,777 , showing strong alignment overall.\n",
     "\n",
     "Among the three, XGBoost produced the most accurate predictions, offering a balance of accuracy and interpretability. This approach demonstrates how data-driven valuation can support fairer and more transparent property assessments while reducing manual effort.\n",
     "\n",
-    "(b) Technical Summary\n",
+    "## (b) Technical Summary\n",
     "\n",
-    "Objective:\n",
+    "**Objective:**\n",
     "To develop a reproducible and interpretable Automated Valuation Model (AVM) that predicts residential property assessments using the City of Winnipeg’s open data.\n",
     "\n",
     "Data Preparation:\n",
     "The dataset included over 240,000 observations and more than 70 columns. After filtering, only residential properties with complete and relevant attributes (e.g., Total Living Area, Year Built) were retained.\n",
     "Categorical features such as Building Type and Neighbourhood Area were one-hot encoded, while numerical fields were standardized as needed.\n",
     "\n",
-    "Modeling Approach:\n",
+    "**Modeling Approach:**\n",
     "Three regression algorithms were implemented and compared:\n",
     "\n",
     "Linear Regression — baseline model providing interpretability and transparency.\n",
@@ -1126,10 +1126,10 @@
     "\n",
     "XGBoost Regressor — gradient boosting ensemble chosen for its strong predictive performance and resilience to overfitting.\n",
     "\n",
-    "Each model was trained on 80% of the dataset and tested on 20%, evaluated using R² and Root Mean Square Error (RMSE).\n",
+    "Each model was trained on **80% of the dataset** and tested on **20%**, evaluated using R² and Root Mean Square Error (RMSE).\n",
     "Feature importance analysis revealed that Total Living Area and Year Built were the strongest predictors of value.\n",
     "\n",
-    "Results:\n",
+    "**Results:**\n",
     "\n",
     "Model\tR²\tRMSE\n",
     "Linear Regression\t0.84\t69,408\n",
@@ -1139,7 +1139,7 @@
     "A comparison of predicted vs. actual values showed that most estimates were within a reasonable range of the true assessments.\n",
     "XGBoost marginally outperformed Random Forest, confirming that boosting improved the model’s accuracy and stability.\n",
     "\n",
-    "Assumptions:\n",
+    "**Assumptions:**\n",
     "\n",
     "The dataset reflects current market conditions at the time of assessment.\n",
     "\n",
@@ -1147,13 +1147,13 @@
     "\n",
     "Data inconsistencies and outliers were minimal post-cleaning.\n",
     "\n",
-    "Conclusion:\n",
+    "**Conclusion:**\n",
     "The AVM demonstrates that machine learning can provide efficient, accurate, and scalable property valuation.\n",
     "The workflow is fully reproducible and modular, allowing for future retraining with updated data to maintain accuracy over time.\n",
     "\n",
-    "Use of AI Tools\n",
+    "## Use of AI Tools\n",
     "\n",
-    "ChatGPT (GPT-5) was used as a coding and documentation assistant — helping to structure the workflow, debug syntax, and format the report clearly.\n",
+    "ChatGPT (GPT-5) was used as an assistant tool for coding structure, documentation clarity, and debugging.\n",
     "All data analysis, model training, and evaluation were conducted independently in Python within Jupyter Notebook.\n",
     "Interpretation of results, modeling choices, and narrative explanations were made by me.\n",
     "\n"
@@ -1162,7 +1162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fdafe493",
+   "id": "82f44115",
    "metadata": {},
    "outputs": [],
    "source": []
